# rsmev-pos-mock-service

./: Cargo.toml  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
pos-mock/: Cargo.toml
pos-mock/examples/: appeal_get.rs
pos-mock/src/: appeal.rs  error.rs  lib.rs
pos-mock/src/db/: appeal.rs  mod.rs
pos-mock/src/types/: mod.rs  requests.rs  responses.rs
rsmev/: Cargo.toml
rsmev/src/: confirm_queue.rs  lib.rs  service.rs
rsmev/src/server/: body.rs  client.rs  extractor.rs  handler_service.rs  mod.rs  serve.rs
src/: confirm_queue.rs  main.rs  service.rs
src/pos/: mod.rs
src/rsmev/: body.rs  client.rs  confirm_queue.rs  extractor.rs  handler_service.rs  message.rs  mod.rs  server.rs
