[package]
name = "pos-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
dashmap = "5.5.3"
futures-util = "0.3.30"
rsmev = { path = "../rsmev" }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
